--- a/gradebook-web/pom.xml
+++ b/gradebook-web/pom.xml
@@ -126,6 +126,16 @@
 			<artifactId>com.liferay.util.taglib</artifactId>
 			<scope>provided</scope>
 		</dependency>
+			<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.asset.api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+			<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.asset.display.page.api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>javax.portlet</groupId>
 			<artifactId>portlet-api</artifactId>
